<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.LoginActivity"
    tools:ignore="HardcodedText">
    <data>
        <variable
            name="viewmodel"
            type="com.example.sewakendaraan.viewModel.LoginViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_baseline_directions_car_24"
                app:tint="@color/Purple_Bamma"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="image" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_black"
                android:text="BAMMA"
                android:textColor="@color/Purple_Bamma"
                android:textSize="38sp"
                android:paddingTop="20sp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintBottom_toBottomOf="@+id/imageView" />
            <LinearLayout
                android:id="@+id/loginFormLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="Username"
                    android:textColorHint="@color/GrayHelperText_Bamma"
                    app:error = "@{viewmodel.error.username}"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:inputType="text"
                        android:text="@={viewmodel.loginFormMutableLiveData.username}"
                        tools:ignore="TextContrastCheck"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="Password"
                    app:error = "@{viewmodel.error.password}"
                    app:errorEnabled="true"
                    android:textColorHint="@color/GrayHelperText_Bamma"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/GrayHelperText_Bamma"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:inputType="textPassword"
                        android:text="@={viewmodel.loginFormMutableLiveData.password}"
                        tools:ignore="TextContrastCheck" />
                    <Button
                        android:id="@+id/forgotPasswordBtn"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotPassword"
                        android:layout_gravity="end"
                        android:textAllCaps="false"
                        android:onClick="moveReqResetPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/Purple_Bamma"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    app:cornerRadius="10dp"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:onClick="login"
                    tools:ignore="TextContrastCheck"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New to our App?"/>

                    <Button
                        android:id="@+id/registerNavBtn"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:text="@string/register"
                        android:textColor="@color/Purple_Bamma"
                        android:onClick="moveRegister"
                        android:textAllCaps="false"/>
                </LinearLayout>
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:indeterminate="true"
                android:background="@drawable/bg_rounded_square"
                android:backgroundTint="@color/Transparant"
                android:indeterminateTint="@color/Purple_Bamma"
                android:visibility="@{viewmodel.progressBarMutableLiveData}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
